ecmascript/parser/tests/typescript-errors/tsc/es6/destructuring/objectBindingPatternKeywordIdentifiers04/input.ts.stderr
error: Expected ident
 --> $DIR/tests/typescript-errors/tsc/es6/destructuring/objectBindingPatternKeywordIdentifiers04/input.ts:2:16
  |
2 | var { "while": while } = { while: 1 }
  |                ^^^^^

